--- a/app/src/main/res/layout/activity_main_ui.xml
+++ b/app/src/main/res/layout/activity_main_ui.xml
@@ -20,13 +20,20 @@
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            tools:ignore="UselessParent"
+            android:weightSum="1">
 
-            <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/dummy_button" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="187dp"
+                android:text="Tryck"
+                android:id="@+id/button"
+                android:layout_weight="1.05"
+                android:background="@color/primary_material_light"
+                android:textColor="#010101" />
 
         </LinearLayout>
+
     </FrameLayout>
 
 </FrameLayout>
