--- a/app/src/main/res/layout/activity_main_ui.xml
+++ b/app/src/main/res/layout/activity_main_ui.xml
@@ -27,12 +27,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="187dp"
                 android:text="Tryck"
+                android:elevation="12dp"
                 android:id="@+id/button"
                 android:layout_weight="1.05"
-                android:background="@color/primary_material_light"
-                android:textColor="#010101" />
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:textColor="#010101"
+                android:visibility="visible"
+                />
 
         </LinearLayout>
+
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/settingsButton"
+            android:src="@android:drawable/ic_menu_preferences"
+            android:layout_gravity="right|top"
+            android:visibility="invisible" />
 
     </FrameLayout>
 
