--- a/app/src/main/res/layout/activity_main_ui.xml
+++ b/app/src/main/res/layout/activity_main_ui.xml
@@ -2,49 +2,33 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#0099cc"
     tools:context=".V8Activity">
-
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
-        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
-        android:text="@string/dummy_content" />
-
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
         android:fitsSystemWindows="true">
-
         <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay" android:orientation="horizontal"
             tools:ignore="UselessParent"
             android:weightSum="1">
-
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="187dp"
-                android:text="Tryck"
-                android:elevation="12dp"
-                android:id="@+id/button"
-                android:layout_weight="1.05"
-                android:background="@android:drawable/dialog_holo_light_frame"
-                android:textColor="#010101"
-                android:visibility="visible"
-                />
-
+            android:layout_width="wrap_content"
+            android:layout_height="187dp"
+            android:text="Tryck"
+            android:elevation="12dp"
+            android:id="@+id/button"
+            android:layout_weight="1.05"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:textColor="#010101"
+            android:visibility="gone"
+            />
         </LinearLayout>
-
-        <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:id="@+id/settingsButton"
-            android:src="@android:drawable/ic_menu_preferences"
-            android:layout_gravity="right|top"
-            android:visibility="invisible" />
-
+        <com.nemoq.nqpossysv8.UI.DispenserWebLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </com.nemoq.nqpossysv8.UI.DispenserWebLayout>
     </FrameLayout>
 
 </FrameLayout>
