--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -1,71 +1,27 @@
 <resources>
+
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
+    <string name="pref_header_general">General</string>
 
-    <string name="pref_header_connection">Connection</string>
-    <string name="pref_default_address">0.0.0.0</string>
-    <string name="pref_default_port">80</string>
-    <string name="pref_title_address">Address</string>
-    <string name="pref_title_port">Port</string>
-
-
-
-    <!-- Example General settings -->
-
- <string name="pref_header_general">General</string>
+    <string name="pref_key_boot">BOOT_APP</string>
+    <string name="pref_key_kiosk">KIOSK_MODE</string>
+    <string name="pref_key_pin">APP_PIN</string>
+    <string name="pref_key_close">CLOSE_SETTINGS</string>
+    <string name="pref_key_quit">QUIT_APP</string>
 
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
+    <string name="pref_header_connection">Connectivity</string>
 
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
+    <string name="pref_key_receive">RECEIVE_LAN</string>
+    <string name="pref_key_name">DEVICE_NAME</string>
+    <string name="pref_key_web_ip">WEB_IP</string>
+    <string name="pref_key_web_port">WEB_PORT</string>
+    <string name="pref_key_udp_port">UDP_PORT</string>
+    <string name="pref_key_listen_port">LISTEN_PORT</string>
 
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
