--- a/app/src/main/res/xml/pref_connection.xml
+++ b/app/src/main/res/xml/pref_connection.xml
@@ -5,12 +5,12 @@
         android:title="Ticket Editor Settings"
         >
     <CheckBoxPreference
-        android:key="receive"
+        android:key="@string/pref_key_receive"
         android:title="Receive from LAN"
         android:summary="Enable the printer to be found by the Editor."
         android:defaultValue="True" />
     <EditTextPreference
-        android:key="device_name"
+        android:key="@string/pref_key_name"
         android:title="Device Name"
         android:defaultValue="Entity V8"
         android:selectAllOnFocus="true"
@@ -20,7 +20,7 @@
         android:maxLines="1" />
 
         <EditTextPreference
-            android:key="listen_port"
+            android:key="@string/pref_key_listen_port"
             android:title="Listen Port"
             android:defaultValue="8080"
             android:selectAllOnFocus="true"
@@ -30,7 +30,7 @@
             android:maxLines="1"
             />
         <EditTextPreference
-            android:key="udp_port"
+            android:key="@string/pref_key_udp_port"
             android:title="UDP Port"
             android:defaultValue="8000"
             android:selectAllOnFocus="true"
@@ -46,9 +46,9 @@
         android:title="Server Settings"
         >
     <EditTextPreference
-        android:key="server_ip"
-        android:title="@string/pref_title_address"
-        android:defaultValue="@string/pref_default_address"
+        android:key="@string/pref_key_web_ip"
+        android:title="Web Ip"
+        android:defaultValue="0.0.0.0"
         android:selectAllOnFocus="true"
         android:inputType="number"
         android:capitalize="words"
@@ -56,9 +56,9 @@
         android:maxLines="1" />
 
     <EditTextPreference
-        android:key="server_port"
-        android:title="@string/pref_title_port"
-        android:defaultValue="@string/pref_default_port"
+        android:key="@string/pref_key_web_port"
+        android:title="Web Port"
+        android:defaultValue="80"
         android:selectAllOnFocus="true"
         android:inputType="number"
         android:capitalize="words"
