--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -7,6 +7,6 @@
         android:title="@string/pref_header_general" />
 
     <header android:fragment="com.nemoq.nqpossysv8.UI.SettingsActivity$ConnectionPreferenceFragment"
-        android:title="@string/pref_header_connection" />
+        android:title="Connectivity" />
 
 </preference-headers>
