--- a/app/src/main/res/layout/activity_main_ui.xml
+++ b/app/src/main/res/layout/activity_main_ui.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc"
+    android:layout_height="match_parent" android:background="#000000"
     tools:context=".V8Activity">
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -11,24 +11,28 @@
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay" android:orientation="horizontal"
             tools:ignore="UselessParent"
-            android:weightSum="1">
-            <Button
-            android:layout_width="wrap_content"
-            android:layout_height="187dp"
-            android:text="Tryck"
-            android:elevation="12dp"
-            android:id="@+id/button"
-            android:layout_weight="1.05"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            android:textColor="#010101"
-            android:visibility="gone"
-            />
-        </LinearLayout>
-        <com.nemoq.nqpossysv8.UI.DispenserWebLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-        </com.nemoq.nqpossysv8.UI.DispenserWebLayout>
+            android:weightSum="1"></LinearLayout>
+
+        <Button
+        android:layout_width="240dp"
+        android:layout_height="219dp"
+        android:text="Touch"
+        android:elevation="12dp"
+        android:id="@+id/button"
+        android:layout_weight="1.05"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:textColor="#010101"
+        android:visibility="visible"
+            android:layout_gravity="center" />
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/settingsButton"
+            android:src="@android:drawable/ic_menu_preferences"
+            android:layout_gravity="right"
+            android:visibility="invisible"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
     </FrameLayout>
 
 </FrameLayout>
