--- a/app/src/main/res/layout/pin_dialog.xml
+++ b/app/src/main/res/layout/pin_dialog.xml
@@ -42,7 +42,8 @@
         android:focusable="false"
         android:textColor="#FFFFFF"
         android:gravity="bottom|center"
-        android:editable="false" />
+        android:editable="false"
+        android:layout_gravity="center_horizontal" />
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -150,6 +151,14 @@
             android:layout_row="5"
             android:layout_column="1"
             android:tag="0" />
+
+        <ImageButton
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/eraseButton"
+            android:layout_gravity="right"
+            android:src="@android:drawable/ic_input_delete"
+            />
 
     </GridLayout>
 
