--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <string name="title_activity_settings">Settings</string>
-
     <!-- Strings related to Settings -->
     <string name="pref_header_general">General</string>
 
@@ -17,11 +16,11 @@
 
     <string name="pref_key_receive">RECEIVE_LAN</string>
     <string name="pref_key_name">DEVICE_NAME</string>
-    <string name="pref_key_web_ip">WEB_IP</string>
+    <string name="pref_key_web_address">WEB_IP</string>
     <string name="pref_key_web_port">WEB_PORT</string>
     <string name="pref_key_udp_port">UDP_PORT</string>
     <string name="pref_key_listen_port">LISTEN_PORT</string>
-
+    <string name="pref_key_service">RESTART_SERVICE</string>
 
 
 </resources>
