--- a/app/src/main/res/xml/pref_connection.xml
+++ b/app/src/main/res/xml/pref_connection.xml
@@ -8,7 +8,7 @@
         android:key="@string/pref_key_receive"
         android:title="Receive from LAN"
         android:summary="Enable the printer to be found by the Editor."
-        android:defaultValue="True" />
+        android:defaultValue="true" />
     <EditTextPreference
         android:key="@string/pref_key_name"
         android:title="Device Name"
@@ -46,11 +46,11 @@
         android:title="Server Settings"
         >
     <EditTextPreference
-        android:key="@string/pref_key_web_ip"
+        android:key="@string/pref_key_web_address"
         android:title="Web Ip"
         android:defaultValue="0.0.0.0"
         android:selectAllOnFocus="true"
-        android:inputType="number"
+        android:inputType="textUri"
         android:capitalize="words"
         android:singleLine="true"
         android:maxLines="1" />
