--- a/app/src/main/res/values/broadcast_tags.xml
+++ b/app/src/main/res/values/broadcast_tags.xml
@@ -6,5 +6,6 @@
     <string name="broadcast_address_changed">ADDRESS_CHANGED</string>
     <string name="broadcast_preferences_changed">PREFERENCES_CHANGED</string>
     <string name="broadcast_service_toggle">SERVICE_TOGGLE_RUN</string>
+    <string name="broadcast_activity_background">ACTIVITY_BACKGROUND</string>
 
 </resources>
